<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivBg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/descriptionImage"
        android:scaleType="centerCrop"
        android:src="@drawable/malam" />

    <View
        android:id="@+id/viewGradient"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignBottom="@id/ivBg"
        android:background="@drawable/shadowview" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/fajr"
        android:textColor="#FFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/btOk"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/city" />

    <TextClock
        android:id="@+id/tvClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:format12Hour="hh:mm a"
        android:textColor="#FFF"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:text="12:00 AM" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvClock"
        android:layout_centerHorizontal="true"
        android:shadowColor="#000"
        android:shadowRadius="2"
        android:textColor="#FFF"
        tools:text="Dayeuh, Jonggol Bogor" />

    <TextView
        android:id="@+id/tvCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:shadowColor="#000"
        android:shadowRadius="2"
        android:textColor="#FFF"
        tools:text="17 September 2019" />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/prayScedule"
                android:textColor="#689F38"
                android:textSize="24sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/card"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/layFajr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/ivIconFajr"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/descriptionImage"
                    android:src="@drawable/dawn" />

                <TextView
                    android:id="@+id/fajr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/ivIconFajr"
                    android:text="@string/subuh"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFajr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="04:25 AM" />


            </RelativeLayout>

            <View
                android:id="@+id/lineFajr"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/layFajr"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="#DFDFDF" />

            <RelativeLayout
                android:id="@+id/laySunrise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineFajr"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/ivIconSunrise"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/descriptionImage"
                    android:src="@drawable/dawn" />

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/ivIconSunrise"
                    android:text="@string/syuruk"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvSunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="05:25 AM" />

            </RelativeLayout>

            <View
                android:id="@+id/lineSunrise"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/laySunrise"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="#DFDFDF" />

            <RelativeLayout
                android:id="@+id/layDhuhr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineSunrise"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/ivIconDhuhr"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/descriptionImage"
                    android:src="@drawable/dawn" />

                <TextView
                    android:id="@+id/dhuhr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/ivIconDhuhr"
                    android:text="Dzuhur"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvDhuhr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="11:25 AM" />

            </RelativeLayout>

            <View
                android:id="@+id/lineDhuhr"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/layDhuhr"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="#DFDFDF" />

            <RelativeLayout
                android:id="@+id/layAsr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineDhuhr"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/ivIconAsr"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/descriptionImage"
                    android:src="@drawable/dawn" />

                <TextView
                    android:id="@+id/asr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/ivIconAsr"
                    android:text="Asar"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvAsr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="02:25 PM" />

            </RelativeLayout>

            <View
                android:id="@+id/lineAsr"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/layAsr"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="#DFDFDF" />

            <RelativeLayout
                android:id="@+id/layMaghrib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineAsr"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/ivIconMaghrib"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/descriptionImage"
                    android:src="@drawable/dawn" />

                <TextView
                    android:id="@+id/maghrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/ivIconMaghrib"
                    android:text="magrib"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvMaghrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="05:25 AM" />

            </RelativeLayout>

            <View
                android:id="@+id/lineMaghrib"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/layMaghrib"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="#DFDFDF" />

            <RelativeLayout
                android:id="@+id/layIsha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineMaghrib"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/ivIconIsha"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/dawn" />
                <!--android:contentDescription="@string/descriptionImage"-->


                <TextView
                    android:id="@+id/isha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/ivIconIsha"
                    android:text="isyaa"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvIsha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="07:25 AM" />

            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvBadConetction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:text="@string/badConetction"
        android:visibility="gone" />

    <com.tuyenmonkey.mkloader.MKLoader
        android:id="@+id/Mkloader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="177dp"
        app:mk_color="#4F8B0B"
        app:mk_type="LineSpinner" />


</RelativeLayout>